# ccbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  HEARTBEAT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  ralph-loop.local.md
.claude/skills/clawhub/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/data-analysis/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/docker/: SKILL.md
.claude/skills/feishu-api/: SKILL.md
.claude/skills/git-advanced/: SKILL.md
.claude/skills/github/: SKILL.md
.claude/skills/http-client/: SKILL.md
.claude/skills/image-process/: SKILL.md
.claude/skills/memory/: SKILL.md
.claude/skills/pdf/: SKILL.md
.claude/skills/playwright/: SKILL.md
.claude/skills/sql/: SKILL.md
.claude/skills/tmux/: SKILL.md
.claude/skills/weather/: SKILL.md
.claude/skills/web-search/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: A2A.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_FINAL_PLANS.md  ARCHITECTURE_IMPROVEMENT.md  ARCHITECTURE_OPTIMIZATION_GUIDE.md  CHANNELS_AND_OPERATIONS.md  CLAUDE_RUNTIME.md  CLAUDE_SDK_ADAPTATION_ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION.md  MILESTONE_EXAMPLE.md  MILESTONE_QUICK_REF.md  OBSERVABILITY_AND_TROUBLESHOOTING.md  OPENCLAW_ADAPTATION_SCENARIOS.md  PRODUCT_ARCHITECTURE.md  PROGRESS_MODE.md  PROJECT_REVIEW.md  QUICK_REFERENCE.md  README.md  RUNTIME_OPERATIONS.md  SYSTEM_INTERNALS.md  TROUBLESHOOTING.md
examples/: config.full.json  config.minimal.json  supervisor_config.json  test_a2a.py  worker_config.json
nanobot/: __init__.py  agent.py  cli.py  config.py  feishu.py  heartbeat.py  server.py  team.py
nanobot/skills/github/: SKILL.md
src/ccbot/: __init__.py  agent.py  cli.py  config.py  feishu.py  logging_setup.py  memory.py  observability.py  scheduler.py  server.py  team.py  workspace.py
src/ccbot/channels/: __init__.py  base.py  cli.py
src/ccbot/channels/feishu/: __init__.py  adapter.py  file_service.py  parser.py  renderer.py  responder.py
src/ccbot/comm/: __init__.py  bus.py  channel.py  context.py  server.py
src/ccbot/core/: __init__.py  debounce.py  dedup.py  queue.py
src/ccbot/models/: __init__.py  comm.py  dispatch.py  schedule.py  supervisor.py
src/ccbot/runtime/: __init__.py  pool.py  profiles.py  sdk_utils.py  tools.py  worker_pool.py
src/ccbot/skills/clawhub/: SKILL.md
src/ccbot/skills/summarize/: SKILL.md
src/ccbot/skills/tmux/: SKILL.md
src/ccbot/skills/weather/: SKILL.md
src/ccbot/templates/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
src/ccbot/templates/.claude/: CLAUDE.md  settings.json
src/ccbot/templates/.claude/skills/docs-maintainer/: SKILL.md
src/ccbot/templates/.claude/skills/memory/: SKILL.md
src/ccbot/templates/.claude/skills/repo-review/: SKILL.md
src/ccbot/templates/prompts/: reviewer.md  supervisor.md  worker.md
src/ccbot/templates/worker/.claude/: CLAUDE.md  settings.json
src/ccbot/webui/: __init__.py  app.py
src/ccbot/webui/templates/: agents.html  base.html  config.html  dashboard.html  env.html  file_preview.html  scheduler.html
tests/: conftest.py  test_agent.py  test_config.py  test_feishu_post_content.py  test_feishu_table_split.py  test_heartbeat_service.py  test_memory.py  test_scheduler.py  test_server.py  test_team.py  test_team_lifecycle.py  test_webui.py  test_workspace.py
tests/channels/: test_base.py  test_cli.py  test_feishu_responder.py
tests/comm/: test_bus.py  test_channel.py  test_context.py  test_server.py
tests/core/: test_debounce.py  test_dedup.py  test_dedup_persist.py  test_queue.py
tests/integration/: __init__.py  conftest.py  test_channel_flow.py  test_heartbeat_integration.py  test_lifecycle.py  test_scheduler_team.py  test_team_agent_memory.py  test_team_worker_dispatch.py
tests/models/: test_dispatch.py  test_schedule.py  test_supervisor.py
tests/runtime/: test_observability.py  test_pool.py  test_pool_interrupt.py  test_pool_memory.py  test_tools.py  test_worker_pool.py
(+2 files in other folders)
